Switch to port 80

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ resilience4j.ratelimiter.configs.default.register-health-indicator=false
 resilience4j.ratelimiter.configs.perClient.limitForPeriod=100
 resilience4j.ratelimiter.configs.perClient.limitRefreshPeriod=1h
 resilience4j.ratelimiter.configs.perClient.timeoutDuration=0s
+
+server.port=80
